# NeoGraph — Python wheel build (commit 3 of the pybind11 plan)
#
# This file builds a Python wheel of the NeoGraph engine + its
# pybind11 binding. It does NOT attempt to package the full C++
# headers / install layout — for that use `cmake --install` directly.
#
# Use:
#     pip install .                         # build & install from source
#     pip install --no-build-isolation .    # reuse system pybind11
#     python -m build --wheel               # produce dist/*.whl
#
# Wheel contents (Linux x86_64):
#     neograph/__init__.py
#     neograph/llm.py
#     neograph/_neograph.cpython-*-linux-gnu.so       (binding)
#     neograph/libneograph_core.so                    (engine)
#     neograph/libneograph_async.so
#     neograph/libneograph_llm.so                     (when LLM enabled)
#
# RPATH on _neograph.so is `$ORIGIN` so the binding finds its sibling
# engine .so files inside the wheel without LD_LIBRARY_PATH.
#
# Cibuildwheel/manylinux + macOS/Windows multi-platform packaging is
# scoped for commit 4+. Today's wheel is Linux-only and not yet
# manylinux-compliant (it links against the Ubuntu OpenSSL ABI).

[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.13",
    # Ninja explicitly so Windows builds use it as the cmake generator
    # (Linux/macOS auto-pick Ninja when present; Windows can default
    # to Visual Studio's multi-config generator otherwise, which
    # complicates cmake --install / wheel staging).
    "ninja>=1.10",
]
build-backend = "scikit_build_core.build"

[project]
# Distribution name on PyPI: ``neograph-engine``. The bare ``neograph``
# was already taken on PyPI (a Python LangGraph wrapper, ironically with
# a similar one-liner pitch). The ``-engine`` suffix makes our positioning
# explicit — this package IS the C++ runtime, not a Python wrapper around
# someone else's runtime. Python import name is ``neograph_engine``.
name = "neograph-engine"
version = "0.2.2"
description = "C++ graph agent engine — Python bindings (LangGraph-equivalent semantics, microsecond engine overhead)"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "fox1245", email = "procoinmac0@gmail.com" }]
keywords = ["agent", "graph", "langgraph", "llm", "pybind11", "cpp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Operating System :: POSIX :: Linux",
    "Operating System :: MacOS",
    "Topic :: Software Development :: Libraries",
]
# certifi ships the Mozilla CA bundle. The wheel's __init__.py uses it
# to point the manylinux-bundled libssl at a CA store the host actually
# has — without this the libssl baked into our manylinux wheel looks
# for AlmaLinux paths (`/etc/pki/tls/certs/...`) that don't exist on
# Ubuntu/Debian/Alpine/macOS and TLS handshakes hang for the full
# request timeout. ~250 KB install, no transitive deps.
dependencies = ["certifi"]

[project.urls]
Homepage      = "https://github.com/fox1245/NeoGraph"
Repository    = "https://github.com/fox1245/NeoGraph"
Documentation = "https://github.com/fox1245/NeoGraph#readme"
Issues        = "https://github.com/fox1245/NeoGraph/issues"

# ─── scikit-build-core ───────────────────────────────────────────────────
#
# Drives CMake during pip install. The CMake invocation builds the
# engine in shared-library mode plus the `_neograph` extension, then
# `cmake --install --component NeoGraphPyBindWheel` stages just the
# wheel-relevant artefacts (engine .so files + binding .so) — without
# dragging in headers, schemas, or anything else the engine's
# default install rules ship.
[tool.scikit-build]
minimum-version = "build-system.requires"

# Drop the cmake build dir under build/ — the same convention as
# manual cmake builds in this repo.
build-dir = "build/{wheel_tag}"

# Reproducible-ish: Release with assertions off, no debug info.
cmake.build-type = "Release"

# Surface cmake install actions in the cibuildwheel log so future
# wheel-content debugging isn't silent.
cmake.define = { CMAKE_INSTALL_MESSAGE = "ALWAYS" }

# Engine config: shared libs (so the wheel can ship .so siblings),
# turn off optional subsystems that pull dead-weight deps (libsqlite3,
# httplib's MCP client). Postgres stays ON — each platform's before-all
# installs libpq dev headers and the wheel-repair step bundles libpq +
# transitive deps. Examples / tests / benchmarks dropped for end-user wheels.
cmake.args = [
    # `-G Ninja` is here (not just CMAKE_GENERATOR=Ninja env var) so
    # scikit-build-core's `get_generator(*args)` detection actually
    # sees it. Without it, scikit-build-core leaves
    # `single_config = not platform.startswith("win")` at its
    # Windows default of False, then passes `--config Release` to
    # cmake --install. Even though Ninja itself ignores --config,
    # the multi-config code paths inside scikit-build-core differ
    # enough that the staged Windows wheel ends up missing the
    # engine .dll siblings (observed: 1 MB Windows wheels through
    # iters 6-12 vs 4.4 MB Linux wheels with the same install
    # rules).
    "-G", "Ninja",
    "-DBUILD_SHARED_LIBS=ON",
    "-DNEOGRAPH_BUILD_PYBIND=ON",
    "-DNEOGRAPH_BUILD_LLM=ON",
    "-DNEOGRAPH_BUILD_MCP=OFF",
    # NEOGRAPH_BUILD_POSTGRES default ON (CMakeLists.txt:19). Each platform's
    # before-all installs libpq dev headers; auditwheel/delocate/delvewheel
    # bundle libpq.{so,dylib,dll} + its transitive deps into the wheel so
    # `neograph_engine.PostgresCheckpointStore` works on a fresh
    # `pip install` without requiring system libpq.
    "-DNEOGRAPH_BUILD_SQLITE=OFF",
    "-DNEOGRAPH_BUILD_EXAMPLES=OFF",
    "-DNEOGRAPH_BUILD_TESTS=OFF",
    "-DNEOGRAPH_BUILD_BENCHMARKS=OFF",
    # Skip the include/ + share/ install rules so they don't end up
    # in the wheel layout.
    "-DNEOGRAPH_INSTALL_HEADERS=OFF",
]

# Headers + schemas would otherwise land in the wheel under
# include/ and share/. Gate them off via the new
# NEOGRAPH_INSTALL_HEADERS flag (default ON; the cmake.args above
# turn it OFF for the wheel build). Engine libs are unconditional.
#
# (Earlier we tried CMake COMPONENTs + scikit-build-core's
# install.components filter, but it didn't reliably propagate the
# --component flag through to cmake --install on Windows, leaving
# the engine .dll files out of the wheel — observed across iters
# 6-9 as a 1 MB wheel followed by `delvewheel: Unable to find
# library: neograph_llm.dll`.)

# Python sources (__init__.py, llm.py) are now installed by the
# cmake install(FILES ...) rule in bindings/python/CMakeLists.txt
# alongside the binding _neograph.{so,pyd} and the engine
# .so/.dll siblings. Routing everything through cmake-install
# avoids a Windows-specific scikit-build-core staging quirk
# observed in iters 6-11 where wheel.packages = [...] appeared
# to interfere with cmake-installed engine .dlls.

# ─── cibuildwheel ────────────────────────────────────────────────────────
#
# Drives the multi-platform wheel matrix in CI (.github/workflows/wheels.yml).
# Locally, you can dry-run a single variant:
#
#     pip install cibuildwheel
#     CIBW_BUILD=cp312-manylinux_x86_64 cibuildwheel --platform linux
#
# Coverage:
#   - Linux x86_64 + aarch64 (manylinux_2_28 — glibc >= 2.28; covers
#     RHEL 8, Ubuntu 20.04+, Debian 11+, Amazon Linux 2023).
#   - macOS arm64 (Apple Silicon native; the macOS runner already runs
#     arm64 so no cross-compile).
#   - Windows: deferred. The engine's public headers don't carry
#     __declspec(dllexport) annotations yet (NEOGRAPH_API macro pass);
#     BUILD_SHARED_LIBS=ON on Windows would link-fail with undefined
#     symbols. Re-enable in pyproject.toml + the workflow once that
#     macro pass lands.
#
# Python: cp39-cp313 (5 versions × 3 platforms = 15 wheels per release).
# musllinux skipped — different glibc lineage; covers Alpine which is
# not our target audience yet. PyPy skipped — pybind11 type-caster
# overhead largely cancels out PyPy's interpreter wins for I/O-bound
# agent code, and the maintenance cost is real.

# ─── scikit-build-core per-platform overrides ─────────────────────────────
#
# Turn off the libcurl HTTP/2 backend on Windows wheel builds. vcpkg's
# curl pulls a chain of TLS/zlib/idn deps that delvewheel would have to
# bundle, ballooning wheel size and adding ~5 min per-wheel build time.
# The libcurl backend is opt-in (SchemaProvider::prefer_libcurl=true);
# Linux + macOS wheels keep it ON via the per-platform before-all
# (libcurl-devel / brew curl).
[[tool.scikit-build.overrides]]
if.platform-system = "win32"
cmake.define.NEOGRAPH_USE_LIBCURL = "OFF"

[tool.cibuildwheel]
build  = "cp39-* cp310-* cp311-* cp312-* cp313-*"
# Skip:
#   - musllinux: Alpine's musl libc, different from glibc-based manylinux
#   - i686: 32-bit x86, no production target
#   - pypy: pybind11 type-cast overhead cancels PyPy's interpreter wins
skip   = "*-musllinux_* *_i686 pp*"

# Inside the wheel-test venv, install pytest and run the binding's
# pytest suite plus a one-line import smoke. The {project} placeholder
# resolves to the source tree path inside the cibw container.
test-requires = ["pytest"]
test-command  = """\
python -c "import neograph_engine; print('cibw smoke version:', neograph_engine.__version__)" && \
python -m pytest -q {project}/bindings/python/tests/\
"""

# Ensure the binding's RPATH actually resolves the bundled engine
# .so siblings — cibuildwheel auditwheel-repairs the wheel after
# build, but a sanity check that imports work even after repair is
# how we'd catch a broken RPATH or missing .so.
test-skip = ""

[tool.cibuildwheel.linux]
# manylinux_2_34 (AlmaLinux 9 base) ships OpenSSL 3.0 — required by
# `deps/httplib.h` whose TLS path explicitly errors out on OpenSSL
# < 3.0:
#
#     #error Sorry, OpenSSL versions prior to 3.0.0 are not supported
#
# manylinux_2_28 (AlmaLinux 8) ships OpenSSL 1.1.1; manylinux2014
# (CentOS 7) ships OpenSSL 1.0.2 — neither works without vendoring
# our own OpenSSL build.
#
# Coverage trade-off: 2_34 corresponds to glibc 2.34 (Sep 2021),
# meaning the wheels need RHEL 9 / Ubuntu 22.04 / Debian 12 or
# newer. Older distros fall back to the sdist (which builds
# against whatever OpenSSL the user supplies).
manylinux-x86_64-image  = "quay.io/pypa/manylinux_2_34_x86_64"
manylinux-aarch64-image = "quay.io/pypa/manylinux_2_34_aarch64"

# Container has gcc/cmake but not openssl-devel/libpq-devel. Install the
# headers so find_package(OpenSSL) and find_package(PostgreSQL) succeed
# during the wheel cmake config.
#   - openssl-devel: async runtime + httplib link OpenSSL 3.
#   - libpq-devel:   PostgresCheckpointStore links libpq. AlmaLinux 9 ships
#                    libpq 13.x in AppStream. auditwheel-repair pulls
#                    libpq.so.5 (and its transitive deps libldap, libsasl2,
#                    libgssapi_krb5, etc.) into the wheel.
before-all = "dnf install -y openssl-devel libpq-devel libcurl-devel"

[tool.cibuildwheel.windows]
# Windows wheel build:
#   - vcpkg supplies OpenSSL (httplib needs >= 3.0; system Windows has none).
#   - delvewheel bundles the engine .dll + libssl/libcrypto into the wheel,
#     mirroring auditwheel/delocate on Linux/macOS.
#   - The NEOGRAPH_API macro pass (include/neograph/api.h, commit 7) makes
#     BUILD_SHARED_LIBS=ON link cleanly on MSVC by tagging public symbols
#     dllexport in the engine and dllimport in the binding.
before-all = """\
vcpkg install openssl:x64-windows libpq:x64-windows && \
echo VCPKG_ROOT=%VCPKG_INSTALLATION_ROOT%\
"""

# Skip libcurl on Windows wheel builds — vcpkg's curl pulls a chain
# of TLS/zlib/idn deps that delvewheel then has to bundle, ballooning
# wheel size and adding ~5 min to the per-wheel build. The libcurl
# HTTP/2 backend is opt-in (SchemaProvider.prefer_libcurl=true);
# Windows users who actually need it can build from source with their
# own vcpkg install of curl. The default ConnPool path is unaffected.

# Forward the vcpkg OpenSSL prefix into CMake. Ninja is pinned via
# `-G Ninja` in the global cmake.args above (so scikit-build-core's
# generator-detection sees it and switches to single-config code
# paths); CMAKE_GENERATOR env var alone wasn't enough for that.
environment = { CMAKE_TOOLCHAIN_FILE = "C:\\\\vcpkg\\\\scripts\\\\buildsystems\\\\vcpkg.cmake" }

# delvewheel auto-discovers the engine .dlls beside the binding (we
# install them via the same cmake install rule as Linux/macOS) and
# pulls in libssl/libcrypto from vcpkg's bin dir.
#
# NOTE: cibuildwheel auto-installs delvewheel ONLY when using its
# default repair-wheel-command. Overriding repair-wheel-command (as
# we do here to inject --add-path) skips that install — the first
# attempt failed with "'delvewheel' is not recognized as an internal
# or external command". Solution: pip install delvewheel right
# before invoking it, and call via `python -m delvewheel` so we don't
# depend on PATH plumbing for newly installed scripts.
#
# `--ignore-existing` is REQUIRED so delvewheel actually searches the
# wheel's own directories for sibling DLLs. Reading the delvewheel
# 1.12 source (_wheel_repair.py:WheelRepair.__init__): without
# --ignore-existing, `self._wheel_dirs = None` and `get_all_needed()`
# only consults system PATH + --add-path. The engine .dlls bundled
# inside `neograph_engine/` by cmake-install are then "missing"
# from delvewheel's perspective even though they're sitting in the
# wheel right next to the binding.
#
# With --ignore-existing, delvewheel walks the wheel's tree, adds
# every directory to its search list, and skips re-bundling DLLs
# it finds there. That's exactly the behaviour we want — the
# engine .dlls are already where they need to be at import time.
repair-wheel-command = """\
pip install delvewheel && \
python -m delvewheel repair --ignore-existing -w {dest_dir} {wheel} \
  --add-path C:\\\\vcpkg\\\\installed\\\\x64-windows\\\\bin\
"""

[tool.cibuildwheel.macos]
# Apple Silicon only for now. universal2 needs the engine to cross-
# compile cleanly to x86_64 on an arm64 runner — extra setup that
# isn't justified given Apple's own arm64 transition is mostly done.
archs = ["arm64"]

# Install libpq for PostgresCheckpointStore. openssl@3 is already
# pre-installed on the macos-14 runner image; libpq is not. Both are
# keg-only on Homebrew (not in the standard /opt/homebrew/lib search
# path), so we point CMake at them via CMAKE_PREFIX_PATH below.
before-all = "brew install libpq curl"

# macOS deployment target: 14.0 (Sonoma, Sep 2023). The pinch is
# Homebrew OpenSSL on the macos-14 GitHub runner — its bottles are
# built with a min target of 14.0:
#
#     delocate.libsana.DelocationError: Library dependencies do not
#     satisfy target MacOS version 12.0
#     ...libcrypto.3.dylib has a minimum target of 14.0
#     ...libssl.3.dylib has a minimum target of 14.0
#
# Setting the wheel target to 12.0 produced a wheel that bundled
# OpenSSL needing 14.0 — broken on macOS 12 / 13 users despite
# the wheel claiming to support them. Bumping to 14.0 makes the
# claim honest. Users on older macOS install via sdist (with their
# own OpenSSL).
#
# CMAKE_PREFIX_PATH exposes Homebrew's keg-only libpq and openssl@3
# to find_package() — same trick ci.yml's macOS job uses. Apple
# Silicon brew prefix is /opt/homebrew (no shell expansion in TOML,
# so the paths are hardcoded; safe because the matrix only runs on
# macos-14 arm64).
environment = { MACOSX_DEPLOYMENT_TARGET = "14.0", CMAKE_PREFIX_PATH = "/opt/homebrew/opt/libpq:/opt/homebrew/opt/openssl@3" }
